tests/checker/fail/concurrent_bare_call.can
bindings "canon:builtins/http-server@0.1.0"

slowEcho = (String) -> Future<String>

main = () -> Unit {
    parallel("a".slowEcho(), "b".slowEcho())
    race("a".slowEcho(), "b".slowEcho()).print()
}
